DTSPB-4997 Enable NOC for paperform case